Update 3. Its been a long way.md
Added how to complete the challange 3.1

--- a/3. Its been a long way.md
+++ b/3. Its been a long way.md
@@ -1,4 +1,4 @@
-# 3.1
+# 3.1 (Done by [ansh7](https://github.com/an-sh7))
 
 ### Challenge:
 Could you please help me find retreat center to the residence of the Oscar-winning celebrity, he was famously nicknamed 'Prince' by his teacher, located near a highway named after William Mulholland?
@@ -6,10 +6,13 @@ Could you please help me find retreat center to the residence of the Oscar-winni
 Enter the flag in this format - THMXPU{thm_parul} ( Everything in Lowercase )
 
 ### Solution: 
-Not solved yet.
+1. The retreat Center is located on a highway named after William Mulholland :- Mulholland Highway
+2. There were three names (The ashram, Millard and one another)
+3. Just tried all the three and the ashram was correct
 
 ### Flag: 
-THMXPU{xxxxxxxxxx}
+THMXPU{the_ashram}  
+
 
 
 # 3.2
